Closed Bug 1987080 Opened 10 months ago Closed 10 months ago

third_party/llama.cpp/src/llama-mmap.cpp:487:34: error: ?RLIMIT_MEMLOCK? was not declared in this scope; did you mean ?RLIMIT_STACK??

Categories

(Core :: Machine Learning: General, defect)

defect

Tracking

()

RESOLVED FIXED
144 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox-esr140 --- unaffected
firefox142 --- unaffected
firefox143 --- unaffected
firefox144 --- fixed

People

(Reporter: petr.sumbera, Assigned: padenot)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

Build on Solaris fails with:

35:35.27 /builds/psumbera/mozilla-central-build/third_party/llama.cpp/src/llama-mmap.cpp:487:34: error: ?RLIMIT_MEMLOCK? was not declared in this scope; did you mean ?RLIMIT_STACK??
35:35.27   487 |         if (suggest && getrlimit(RLIMIT_MEMLOCK, &lock_limit)) {
35:35.27       |                                  ^~~~~~~~~~~~~~
35:35.27       |                                  RLIMIT_STACK
35:35.44 At global scope:
35:35.44 cc1plus: note: unrecognized command-line option ?-Wno-tautological-unsigned-enum-zero-compare? may have been intended to silence earlier diagnostics
35:35.49 gmake[4]: *** [/builds/psumbera/mozilla-central-build/config/rules.mk:670: llama-mmap.o] Error 1

The first bad revision is:
changeset: 804706:a6b5919847a1
user: Paul Adenot <paul@paul.cx>
date: Wed Sep 03 18:46:03 2025 -0700
description:
Bug 1971158 - Vendor llama.cpp. r=glandium

Keywords: regression
Regressed by: 1971158

The Bugbug bot thinks this bug should belong to the 'Firefox Build System::General' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → General
Product: Firefox → Firefox Build System

:padenot, since you are the author of the regressor, bug 1971158, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(padenot)
Assignee: nobody → padenot
Flags: needinfo?(padenot)
Component: General → Machine Learning
Product: Firefox Build System → Core

Petr, I don't have a Solaris machine handy, so I made this work the same as on embedded apple target (watch/tvos) and AIX, it's probably appropriate and will definitely fix the build. I used __sun__ as the #define, as it appeared to be what we generally use (but let me know if it can be better).

Flags: needinfo?(petr.sumbera)
Status: UNCONFIRMED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 144 Branch

Set release status flags based on info from the regressing bug 1971158

Thank you for the fix! It builds now again.

Flags: needinfo?(petr.sumbera)
QA Whiteboard: [qa-triage-done-c145/b144]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: