Bug 1987080 - Fix llama.cpp build on Solaris. r=atossou

Differential Revision: https://phabricator.services.mozilla.com/D263919